Header spacing fix

--- a/wp-content/themes/slices2016/sass/typography/_copy.scss
+++ b/wp-content/themes/slices2016/sass/typography/_copy.scss
@@ -1,5 +1,5 @@
 .site-content {
-	margin-top: 100px;
+	margin-top: 120px;
 }
 p {
 	margin-bottom: 1.5em;
