--- a/wp-content/themes/slices2016/style.css
+++ b/wp-content/themes/slices2016/style.css
@@ -6016,7 +6016,7 @@ h3 {
   color: #DCAE75; }
 
 .site-content {
-  margin-top: 100px; }
+  margin-top: 120px; }
 
 p {
   margin-bottom: 1.5em; }
